# airflow-orchestrator-dag-pipeline

./: README.md  docker-compose.yaml  dockerfile
airflow-sdk/: pyproject.toml
airflow-sdk/airflow-sdk/: __init__.py
airflow-sdk/airflow-sdk/decorators/: sql.py
dags/: branch.py  celery.py  group.py  user.py  user_processing.py  xcom.py
datasets/: fakeuser.json
