[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "airflow-sdk/__init__.py"

[tool.hatch.build.targets.wheel]
packages =["airflow-sdk"]

[project]
name = airflow-sdk
dynamic = ["version"]
description = "airflow development"
readme = ".\README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.7.0",
    "typing-extensions>=4.0.0"
]

[project.entry-points.apache_airflow_provider]
provider_info = "airflow-sdk:get_provider_info"
